Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102736

ERROR: The test executable CRASHed uncontrollably!

    XMLWordPrintable

Details

    • a58939de5c (qt/qtapplicationmanager/dev) a58939de5c (qt/tqtc-qtapplicationmanager/dev) b58bc98be3 (qt/qtapplicationmanager/6.3) b58bc98be3 (qt/tqtc-qtapplicationmanager/6.3) b58bc98be3 (qt/qtapplicationmanager/6.3.1)

    Description

      qt-testrunner.py     INFO: Test process exited with code: 0
      agent:2022/04/19 14:54:22 build.go:394: 12: qt-testrunner.py    ERROR: Failed to parse the XML log file: /Users/qt/work/testresults/tst_simple_single-process.sh-1650380062046.xml
      agent:2022/04/19 14:54:22 build.go:394: 12: qt-testrunner.py    ERROR: File Contents:
      agent:2022/04/19 14:54:22 build.go:394: 12: 
      agent:2022/04/19 14:54:22 build.go:394: 12: 
      agent:2022/04/19 14:54:22 build.go:394: 12: 
      agent:2022/04/19 14:54:22 build.go:394: 12: qt-testrunner.py    ERROR: The test executable CRASHed uncontrollably! Details about where we caught the problem:
      agent:2022/04/19 14:54:22 build.go:394: 12: Traceback (most recent call last):
      agent:2022/04/19 14:54:22 build.go:394: 12:   File "/Users/qt/work/install/libexec/qt-testrunner.py", line 348, in main
      agent:2022/04/19 14:54:22 build.go:394: 12:     failed_functions = parse_log(results_file)
      agent:2022/04/19 14:54:22 build.go:394: 12:   File "/Users/qt/work/install/libexec/qt-testrunner.py", line 206, in parse_log
      agent:2022/04/19 14:54:22 build.go:394: 12:     tree = ET.parse(results_file)
      agent:2022/04/19 14:54:22 build.go:394: 12:   File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/xml/etree/ElementTree.py", line 1229, in parse
      agent:2022/04/19 14:54:22 build.go:394: 12:     tree.parse(source, parser)
      agent:2022/04/19 14:54:22 build.go:394: 12:   File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/xml/etree/ElementTree.py", line 580, in parse
      agent:2022/04/19 14:54:22 build.go:394: 12:     self._root = parser._parse_whole(source)
      agent:2022/04/19 14:54:22 build.go:394: 12: xml.etree.ElementTree.ParseError: no element found: line 1, column 0
      agent:2022/04/19 14:54:22 build.go:394: 12: qt-testrunner.py     INFO: Will re-run the full test executable
      agent:2022/04/19 14:54:22 build.go:394: 12: qt-testrunner.py    DEBUG: Running test command line: ['/Users/qt/work/qt/qtapplicationmanager_standalone_tests/tests/auto/qml/simple/tst_simple_single-process.sh', '-o', '/Users/qt/work/testresults/tst_simple_single-process.sh-1650380062556.xml,xml', '-o', '-,txt']
      agent:2022/04/19 14:54:22 build.go:394: 12: [WARN | am.deployment] No --installation-dir command line parameter or applications/installationDir configuration key specified. It won't be possible to install, remove or access installable packages.
      agent:2022/04/19 14:54:23 build.go:394: 12: [INFO | am.graphics] WindowManager: running in single-process mode [forced at compile-time]
      agent:2022/04/19 14:54:23 build.go:394: 12: [INFO | default] Verbose mode is off (change by (un)setting $AM_VERBOSE_TEST)
      agent:2022/04/19 14:54:23 build.go:394: 12:  TEST: tst_applicationmanager.qml in single-process mode
      agent:2022/04/19 14:54:23 build.go:394: 12: qt-testrunner.py     INFO: Test process exited with code: 0
      agent:2022/04/19 14:54:23 build.go:394: 12: qt-testrunner.py    ERROR: Failed to parse the XML log file: /Users/qt/work/testresults/tst_simple_single-process.sh-1650380062556.xml
      agent:2022/04/19 14:54:23 build.go:394: 12: qt-testrunner.py    ERROR: File Contents:
      agent:2022/04/19 14:54:23 build.go:394: 12: 
      agent:2022/04/19 14:54:23 build.go:394: 12: 
      agent:2022/04/19 14:54:23 build.go:394: 12: 
      agent:2022/04/19 14:54:23 build.go:394: 12: qt-testrunner.py    ERROR: The test executable CRASHed uncontrollably! Details about where we caught the problem:
      agent:2022/04/19 14:54:23 build.go:394: 12: Traceback (most recent call last):
      agent:2022/04/19 14:54:23 build.go:394: 12:   File "/Users/qt/work/install/libexec/qt-testrunner.py", line 348, in main
      agent:2022/04/19 14:54:23 build.go:394: 12:     failed_functions = parse_log(results_file)
      agent:2022/04/19 14:54:23 build.go:394: 12:   File "/Users/qt/work/install/libexec/qt-testrunner.py", line 206, in parse_log
      agent:2022/04/19 14:54:23 build.go:394: 12:     tree = ET.parse(results_file)
      agent:2022/04/19 14:54:23 build.go:394: 12:   File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/xml/etree/ElementTree.py", line 1229, in parse
      agent:2022/04/19 14:54:23 build.go:394: 12:     tree.parse(source, parser)
      agent:2022/04/19 14:54:23 build.go:394: 12:   File "/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/xml/etree/ElementTree.py", line 580, in parse
      agent:2022/04/19 14:54:23 build.go:394: 12:     self._root = parser._parse_whole(source)
      agent:2022/04/19 14:54:23 build.go:394: 12: xml.etree.ElementTree.ParseError: no element found: line 1, column 0
      agent:2022/04/19 14:54:23 build.go:394: 12: qt-testrunner.py    ERROR: Full test run failed repeatedly, aborting!
      agent:2022/04/19 14:54:23 build.go:394: 12: CMake Error at tst_simple_single-processWrapperRelWithDebInfo.cmake:17 (message):
      agent:2022/04/19 14:54:23 build.go:394: 12:   /Users/qt/work/install/libexec/qt-testrunner.py --
      agent:2022/04/19 14:54:23 build.go:394: 12:   /Users/qt/work/qt/qtapplicationmanager_standalone_tests/tests/auto/qml/simple/tst_simple_single-process.sh
      agent:2022/04/19 14:54:23 build.go:394: 12:   execution failed with exit code 3.
      agent:2022/04/19 14:54:23 build.go:394: 12: 
      agent:2022/04/19 14:54:23 build.go:394: 12: 
      agent:2022/04/19 14:54:23 build.go:394: 12/25 Test #12: tst_simple_single-process ..........***Failed    1.16 sec
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/f21a10431b5b836d48f8243ac9631a25d95915c4/MacOSMacOS_10_14x86_64MacOSMacOS_10_14x86_64Clangqtci-macos-10.14-x86_64-e0f98bSccache_TestOnly/a338a672d907b7965e6acb88efc7d4655f98b83c/test_1650380064/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1650380035

      Tested changes (refs/builds/qtci/dev/1650379927):

      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/406499/2 Update dependencies on 'dev' in qt/qtapplicationmanager

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rgriebl Robert Griebl
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes