src/tools/testrunner/testrunner.h
@@ -34,6 +34,7 @@
 #include <QtAppManCommon/global.h>
 #include <QStringList>
 
+QT_FORWARD_DECLARE_CLASS(QQmlEngine)
 
 QT_BEGIN_NAMESPACE_AM
 
@@ -41,7 +42,7 @@ class TestRunner
 {
 public:
     static void initialize(const QString &testFile, const QStringList &testRunnerArguments);
-    static int exec();
+    static int exec(QQmlEngine *qmlEngine);
 };
 
 QT_END_NAMESPACE_AM
